--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "use-methods-history",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "useMethods with combined state history",
+    "type": "module",
     "main": "use-methods-history.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
